[project]
name = "rl-local-dashboard"
version = "1.0.5"
description = "Local Rocket League replay dashboard using boxcars"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.10.0",
]

[tool.uv]
package = false

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
commit_parser = "conventional"

[tool.semantic_release.publish]
upload_to_vcs_release = true
dist_glob_patterns = []

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "feat",
  "fix",
  "perf",
  "refactor",
  "build",
  "chore",
  "ci",
  "docs",
  "style",
  "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor", "build", "chore", "ci", "docs", "style", "test"]
